trunk/Archive/b0b8a9bcadc1853eee6c520ea2b7b840-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In instantiation of ‘void foo(T&) [with T = short int]’:
main.cpp:20:10:   required from here
main.cpp:10:15: error: invalid initialization of reference of type ‘int&’ from expression of type ‘short int’
     real_foo(t);
               ^
main.cpp:2:6: error: in passing argument 1 of ‘void real_foo(int&)’
 void real_foo(int&)
      ^
